syntax = "proto3";

package hotel;

message Hotel {
  int32 id = 1;
  string name = 2;
  string address = 3;
  string city = 4;
  string country = 5;
  repeated HotelRoom rooms = 6;
}

message HotelRoom {
  int32 id = 1;
  int32 roomNumber = 2;
  bool available = 3;
  int32 hotelId = 4;
}

service HotelCRUDService {
    rpc Find (FindRequest) returns (FindResponse);
    rpc Create (CreateHotelRequest) returns (CreateHotelResponse);
    rpc Update (UpdateHotelRequest) returns (UpdateHotelResponse);
    rpc Delete (DeleteHotelRequest) returns (DeleteHotelResponse);
}

message FindRequest {
  int32 id = 1;
  string name = 2;
}

message FindResponse {
  repeated Hotel hotels = 1;
}

message CreateHotelRequest {
    string name = 1;
    string address = 2;
    string city = 3;
    string country = 4;
    repeated HotelRoom rooms = 5;
}
  
message CreateHotelResponse {
    Hotel hotel = 1;
}

message UpdateHotelRequest {
    int32 id = 1;
    string name = 2;
    string address = 3;
    string city = 4;
    string country = 5;
}

message UpdateHotelResponse {
    Hotel hotel = 1;
}

message DeleteHotelRequest {
    int32 id = 1;
}

message DeleteHotelResponse {
    Hotel hotel = 1;
}

message CreateHotelRoomRequest {
    int32 hotelId = 1;
    int32 roomNumber = 2;
}

message CreateHotelRoomResponse {
    HotelRoom hotelRoom = 1;
}

